added more training progress

--- a/DataFormatting.ipynb
+++ b/DataFormatting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5242e5fb",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,13 @@
     "from scipy.ndimage import rotate\n",
     "import Utils\n",
     "import cv2\n",
-    "from facenet_pytorch import MTCNN, InceptionResnetV1"
+    "from facenet_pytorch import MTCNN\n",
+    "from Weights import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "bb156980",
    "metadata": {},
    "outputs": [],
@@ -49,154 +50,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "c3e331cc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>skin_tone</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age</th>\n",
-       "      <th>is_face</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TRAIN0002.png</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>TRAIN0006.png</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>TRAIN0007.png</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>TRAIN0011.png</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>TRAIN0012.png</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12271</th>\n",
-       "      <td>TRAIN9988.png</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12275</th>\n",
-       "      <td>TRAIN9992.png</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12276</th>\n",
-       "      <td>TRAIN9993.png</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12278</th>\n",
-       "      <td>TRAIN9995.png</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12282</th>\n",
-       "      <td>TRAIN9999.png</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6078 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                name  skin_tone  gender  age  is_face\n",
-       "2      TRAIN0002.png          5       1    0     True\n",
-       "6      TRAIN0006.png          1       0    1     True\n",
-       "7      TRAIN0007.png          1       0    1     True\n",
-       "11     TRAIN0011.png          3       0    1     True\n",
-       "12     TRAIN0012.png          3       1    2     True\n",
-       "...              ...        ...     ...  ...      ...\n",
-       "12271  TRAIN9988.png          5       1    3     True\n",
-       "12275  TRAIN9992.png          4       0    2     True\n",
-       "12276  TRAIN9993.png          1       1    1     True\n",
-       "12278  TRAIN9995.png          8       0    1     True\n",
-       "12282  TRAIN9999.png          3       1    1     True\n",
-       "\n",
-       "[6078 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def detect_nonfaces(df,root,image_size=256):\n",
     "    mtcnn = MTCNN(image_size = image_size)\n",
@@ -221,154 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "6a5cf0bc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>skin_tone</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age</th>\n",
-       "      <th>is_face</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>TRAIN0001.png</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TRAIN0002.png</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>TRAIN0005.png</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>TRAIN0007.png</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>TRAIN0009.png</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12275</th>\n",
-       "      <td>TRAIN9992.png</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12276</th>\n",
-       "      <td>TRAIN9993.png</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12278</th>\n",
-       "      <td>TRAIN9995.png</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12281</th>\n",
-       "      <td>TRAIN9998.png</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12282</th>\n",
-       "      <td>TRAIN9999.png</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6842 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                name  skin_tone  gender  age  is_face\n",
-       "1      TRAIN0001.png          0       0    1    False\n",
-       "2      TRAIN0002.png          5       1    0     True\n",
-       "5      TRAIN0005.png          1       1    0    False\n",
-       "7      TRAIN0007.png          1       0    1     True\n",
-       "9      TRAIN0009.png          7       0    1    False\n",
-       "...              ...        ...     ...  ...      ...\n",
-       "12275  TRAIN9992.png          4       0    2     True\n",
-       "12276  TRAIN9993.png          1       1    1     True\n",
-       "12278  TRAIN9995.png          8       0    1     True\n",
-       "12281  TRAIN9998.png          4       1    1    False\n",
-       "12282  TRAIN9999.png          3       1    1     True\n",
-       "\n",
-       "[6842 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "validation_labels = train_labels.sample(frac=.2,replace=False)\n",
     "train_labels = train_labels.drop(validation_labels.index)\n",
@@ -377,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "5ed5657a",
    "metadata": {},
    "outputs": [],
@@ -390,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed18801",
+   "id": "f65db24d",
    "metadata": {},
    "outputs": [],
    "source": []
