--- a/BaseModels.ipynb
+++ b/BaseModels.ipynb
@@ -193,7 +193,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ad5bca33",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -201,8 +203,23 @@
      "text": [
       "(35354, 5)\n",
       "(7786, 5)\n",
-      "epoch 0\n",
-      "curr loss 6.335860729217529 step 48  |  \r"
+      "model being saved to ../../data/models/dualhist_model_hist400_h400_st600_a400_g400_ed3_std2_ad2_gd2_balanced\n",
+      "epoch 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "curr loss 6.542600631713867 step 29  | \r"
      ]
     }
    ],
@@ -227,23 +244,30 @@
     "                validation_df,\n",
     "                root,\n",
     "                epochs=300,\n",
-    "                lr=.1,\n",
+    "                lr=.001,\n",
     "                batch_size=200,\n",
     "                patience = 20,\n",
     "                loss_weights = [2,1,.5],\n",
     "                save_path=None,\n",
+    "                histogram = True,\n",
     "                upsample=True,\n",
+    "                **kwargs,\n",
     "               ):\n",
     "    if save_path is None:\n",
-    "        save_path = root + 'models/' + model.get_identifier()\n",
-    "    train_loader = FaceGenerator(train_df,Constants.data_root,batch_size=batch_size,upsample=upsample)\n",
-    "    validation_loader = FaceGenerator(validation_df,Constants.data_root,validation=True,batch_size=batch_size,upsample=upsample)\n",
+    "        save_path = root + 'models/'+ model.get_identifier()\n",
+    "        if upsample:\n",
+    "            save_path += '_balanced'\n",
+    "    if upsample:\n",
+    "        patience = int(patience/10) + 1\n",
+    "    train_loader = FaceGenerator(train_df,Constants.data_root,batch_size=batch_size,upsample=upsample,**kwargs)\n",
+    "    validation_loader = FaceGenerator(validation_df,Constants.data_root,validation=True,batch_size=batch_size,upsample=upsample,**kwargs)\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    model = model.to(device)\n",
+    "    model.train(True)\n",
     "    loss_fn = torch.nn.CrossEntropyLoss()\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
     "    \n",
-    "    format_y = lambda y: y.long().to(model.device)\n",
+    "    format_y = lambda y: y.long().to(device)\n",
     "    \n",
     "    def get_loss(m,xin,ytrue):\n",
     "        outputs = m(xin)\n",
@@ -261,8 +285,16 @@
     "        count = 0\n",
     "        for i, [x_batch, y_batch] in enumerate(train_loader):\n",
     "            optimizer.zero_grad()\n",
-    "            xb = x_batch.to(device)\n",
-    "            xb.requires_grad_(True)\n",
+    "            if histogram:\n",
+    "                xh = torch_color_histogram(x_batch)\n",
+    "                xh = xh.to(device)\n",
+    "                xh.requires_grad = True\n",
+    "                xxb = x_batch.to(device)\n",
+    "                xxb.requires_grad=True\n",
+    "                xb = [xxb,xh]\n",
+    "            else:\n",
+    "                xb = x_batch.to(device)\n",
+    "                xb.requires_grad_(True)\n",
     "            outputs,total_losses = get_loss(model, xb,y_batch)\n",
     "            total_losses.backward()\n",
     "            optimizer.step()\n",
@@ -276,26 +308,32 @@
     "        return running_loss/count, [a/count for a in running_accuracy]\n",
     "    \n",
     "    def val_epoch():\n",
-    "        with torch.no_grad():\n",
-    "            running_loss = 0\n",
-    "            running_accuracy = [0,0,0]\n",
-    "            count = 0\n",
-    "            for i, [x_batch, y_batch] in enumerate(validation_loader):\n",
+    "        running_loss = 0\n",
+    "        running_accuracy = [0,0,0]\n",
+    "        count = 0\n",
+    "        for i, [x_batch, y_batch] in enumerate(validation_loader):\n",
+    "            if histogram:\n",
+    "                xh = torch_color_histogram(x_batch)\n",
+    "                xh = xh.to(device)\n",
+    "                xxb = x_batch.to(device)\n",
+    "                xb = [xxb,xh]\n",
+    "            else:\n",
     "                xb = x_batch.to(device)\n",
-    "                outputs = model(xb)\n",
-    "                outputs,total_losses = get_loss(model,xb,y_batch)\n",
-    "                running_loss += total_losses.item()\n",
-    "                count += 1\n",
-    "                for i,(y,ypred) in enumerate(zip(y_batch, outputs)):\n",
-    "                    accuracy = categorical_accuracy(ypred.float(),format_y(y))\n",
-    "                    running_accuracy[i] += accuracy.item()\n",
+    "            outputs = model(xb)\n",
+    "            outputs,total_losses = get_loss(model,xb,y_batch)\n",
+    "            running_loss += total_losses.item()\n",
+    "            count += 1\n",
+    "            for i,(y,ypred) in enumerate(zip(y_batch, outputs)):\n",
+    "                accuracy = categorical_accuracy(ypred.float(),format_y(y))\n",
+    "                running_accuracy[i] += accuracy.item()\n",
     "        return running_loss/count, [a/count for a in running_accuracy]\n",
-    "    model.train(True)\n",
+    "    \n",
     "    \n",
     "    best_val_loss = 100000\n",
     "    steps_since_improvement = 0\n",
     "    hist = []\n",
-    "    \n",
+    "    best_weights = model.state_dict()\n",
+    "    print('model being saved to',save_path)\n",
     "    for epoch in range(epochs):\n",
     "        print('epoch',epoch)\n",
     "        model.train(True)\n",
@@ -304,9 +342,10 @@
     "        model.train(False)\n",
     "        val_loss, val_acc = val_epoch()\n",
     "        print('val loss', val_loss, 'val accuracy', val_acc)\n",
-    "        torch.save(model.state_dict(), save_path + '_epoch' + str(epoch))\n",
+    "#         torch.save(model.state_dict(), save_path + '_epoch' + str(epoch))\n",
     "        if best_val_loss > val_loss:\n",
     "            torch.save(model,save_path)\n",
+    "            best_weights = model.state_dict()\n",
     "            best_val_loss = val_loss\n",
     "            steps_since_improvement = 0\n",
     "        else:\n",
@@ -328,30 +367,16 @@
     "    return model,hist\n",
     "\n",
     "m,h = train_model(\n",
-    "    FacenetModel(fine_tune=True),\n",
+    "    DualHistogramModel(base_model=InceptionResnetV1(pretrained='vggface2')),\n",
+    "#     DualHistogramModel(),\n",
     "    train_labels,\n",
     "    validation_labels,\n",
     "    Constants.data_root,\n",
+    "    batch_size=100,\n",
+    "    histogram=True,\n",
     ")\n",
     "del m\n",
     "h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55d2f53a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m2,h2 = train_model(\n",
-    "    HistogramModel(),\n",
-    "    train_dataset,\n",
-    "    val_dataset,\n",
-    "    data_root,\n",
-    ")\n",
-    "del m2\n",
-    "h2"
    ]
   },
   {
@@ -361,13 +386,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.device('cuda')"
+    "m,h = train_model(\n",
+    "#     DualHistogramModel(base_model=InceptionResnetV1(pretrained='vggface2')),\n",
+    "    DualHistogramModel(),\n",
+    "    train_labels,\n",
+    "    validation_labels,\n",
+    "    Constants.data_root,\n",
+    "    batch_size=100,\n",
+    "    histogram=True,\n",
+    ")\n",
+    "del m\n",
+    "h"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "cf0f5564",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30424a60-e49f-43d8-8b19-e711c7c82754",
    "metadata": {},
    "outputs": [],
    "source": []
